--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
     <base href="/">
-    <title>Angular2 + TypeScript</title>
+    <title>Curso Angular2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- inject:css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="//cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
+    
     <!-- endinject -->
 </head>
 <body>
-    <my-app>Loading...</my-app>
+    <app>Loading...</app>
 
     <!-- inject:js -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
