--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
     <!-- inject:css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/helpers.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
     
